--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,144 @@
 
-
 @import url('https://fonts.googleapis.com/css2?family=Robota:wght@100;400;700');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/minireset.css/0.0.2/minireset.min.css');
 
-body{
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
+
+body {
     color: black;
     font-family: 'Robota', sans-serif;
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.2;
+    margin: 0;
 }
 
 
-.navbar-brand{
-    color: brown;
+.navbar-brand {
+    font-size: 1.25rem;
+    color: black;
+    display: inline-block;
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    margin-right: 1rem;
+    white-space: nowrap;
+    font-weight: 600;
 }
-.text-dark{
-   color: darkslategrey;
+
+.text-dark {
+    color: darkslategrey;
 }
-.text-uppercase{
+
+.text-uppercase {
     text-transform: uppercase;
 }
-.font-weight-bold{
+
+.font-weight-bold {
     font-weight: 700;
 }
 
-a{
+a {
     color: chocolate;
     text-decoration: none;
 }
-a:hover{
+
+a:hover {
     color: brown;
     text-decoration: underline;
 }
 
-.bnt{
+.bnt {
     background-color: transparent;
     text-align: center;
     font-size: 1.1em;
-    line-height: 1.5;
-;
-}
-.btn-dark{
-    color: aliceblue;
-    background-color: darkslategrey;
+    line-height: 1.5;;
 }
 
-.btn-dark:hover{
+.btn-dark {
+    color: aliceblue;
+    background-color: darkslategrey;
+    padding: 1em 1.5em;
+    border: gray solid 2px;
+    border-radius: 6px;
+}
+
+.btn-dark:hover {
     color: chartreuse;
     background-color: black;
     text-decoration: none;
+    border: blue solid 2px;
+}
+
+.bg-white {
+    background: white;
+}
+
+.bg-gray{
+    background-color: khaki;
+}
+
+.hero {
+    background-image: url("img/2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /*min-height: 100vh;*/
+}
+
+.hero header{
+    padding: 8em 40% 8em 40%;
+}
+
+
+img{
+    display: block;
+}
+
+.my-3{
+    margin-top: 2em;
+}
+
+.my-3{
+    margin-bottom: 2em;
+}
+
+.footer{
+    padding: 6em;
+    background-color: darkgray;
+    color: white;
+}
+
+.container{
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+nav{
+    background-color: white;
+    padding: 1rem 1.5rem;
+}
+
+.navbar-nav{
+    list-style: none;
+}
+
+.navbar-nav a{
+    color: gray;
+    font-size: 1.1rem;
+    text-transform: capitalize;
+    letter-spacing: 0.1rem;
+    font-weight: bold;
+    display: block;
+    width: 100%;
+    padding: 0.75rem 0;
+}
+
+.navbar-nav a:hover{
+    color: chocolate;
+    text-decoration: underline;
 }
