--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,8 @@ a:hover {
     background-size: cover;
     background-attachment: fixed;
     /*min-height: 100vh;*/
+    min-height: 15em;
+    height: 20em;
 }
 
 .hero header{
@@ -224,5 +226,151 @@ nav{
 .navbar-nav a:hover{
     color: chocolate;
     text-decoration: underline;
+}
+
+/*slider*/
+
+.align-items-center{
+    align-items: center !important;
+}
+
+.d-flex{
+    display: flex !important;
+}
+
+.slider{
+position: relative;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.slides .slide{
+    width: 20%;
+    float: left;
+    pasition: relative;
+}
+
+.slide{
+    width: 100%;
+}
+
+.slide img{
+    width: 100%;
+    max-width: 100%;
+    height: 20em;
+    object-fit: cover;
+}
+
+.overflow{
+    overflow: hidden;
+    width: 100%;
+}
+
+.hero header{
+    padding: 8em 0% 8em 0%;
+}
+
+.slides .items{
+    width: 500%;
+    line-height: 0;
+    margin: 0;
+}
+
+@keyframes slider {
+    0% {left: 0%;}
+    10%{left: 100%;}
+    20%{left: -100%;}
+    30%{left: -200%;}
+    40%{left: -300%;}
+    50%{left: -400%;}
+    60%{right:400%}
+    100% {left:-400%;}
+    90%{right: 100%;}
+    80%{right: 200%;}
+    70%{right: 300%;}
+    60%{right:400%;}
+
+}
+
+.slider .items{
+    animation: 30s slider;
+}
+
+.slider .items:hover{
+    animation: paused;
+}
+
+.text-slide{
+    position: absolute;
+    top: 2rem;
+    left: 3rem;
+}
+
+.carousel{
+    background: white;
+    box-shadow: 0 10px 20px -5px rgba(0,0,0,0.12);
+    height: 150px;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    width: 90%;
+}
+
+.carousel .carousel-track{
+    display: flex;
+    width: calc(250px*8);
+    animation: scroll 40s linear infinite;
+}
+
+.carousel .carousel-item{
+    width: 250px;
+    height: 100px;
+}
+
+.carousel-item img{
+    object-fit: cover;
+}
+
+@keyframes scroll {
+    0% {transform: translateX(0)}
+    100%{transform: translateX(calc(-250px*4))}
+}
+
+.carousel::before, .carousel::after{
+    background: linear-gradient(to right, white 0%, rgba(255,255,255, 0)100%);
+    content: '';
+    height: 150px;
+    position: absolute;
+    width: 200px;
+    z-index: 2;
+}
+
+.carousel::after{
+    right: 0;
+    top: 0;
+    transform: rotateZ(180deg);
+}
+
+.carousel::before{
+    left: 0;
+    top: 0;
+}
+
+.carousel-item{
+    display: block;
+    position: relative;
+}
+
+.category-item-title{
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    color: #333;
+    background: white;
+    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
