--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ a:hover {
 }
 
 .hero {
-    background-image: url("img/2.jpg");
+    background-image: url("../img/2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
