--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,7 @@ img{
 
 .img-fluid{
     max-width: 100%;
+    height: auto;
 }
 
 .my-3{
@@ -140,11 +141,22 @@ img{
     margin-top: 10px;
 }
 
+.position-relative{
+    position: relative;
+}
+
+.d-block{
+    display: block;
+}
 
 .container{
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.w-100{
+    width: 100%;
 }
 
 @media (min-width: 570px){
@@ -177,6 +189,8 @@ img{
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+
 
 .col,
 .col-auto,
@@ -235,10 +249,60 @@ img{
     width: 100%;
     position: relative;
     padding: 0 15px;
+    margin-top: 30px;
 }
+
+/*.col{*/
+/*    margin-top: 25px;*/
+/*}*/
 
 .col-auto{
     flex: 0 0 auto;
+}
+
+
+@media (min-width: 570px){
+    .col-sm-6{
+        max-width: calc(50%);
+        flex: 0 0 50%;
+    }
+}
+
+@media (min-width: 770px){
+    .col-md-4{
+        width: calc(4*100%/12);
+        flex: 0 0 calc(4*100%/12);
+    }
+    .col-md-6{
+        max-width: calc(50%);
+        flex: 0 0 50%;
+    }
+}
+
+@media (min-width: 990px){
+    .col-lg-3{
+        max-width: calc(3*100%/12);
+        flex: 0 0 calc(3*100%/12);
+    }
+    .col-lg-4{
+        width: calc(4*100%/12);
+        flex: 0 0 calc(4*100%/12);
+    }
+    .col-lg-6{
+        max-width: calc(50%);
+        flex: 0 0 50%;
+    }
+    .col-lg-9{
+        max-width: calc(9*100%/12);
+        flex: 0 0 calc(9*100%/12);
+    }
+}
+
+@media (min-width: 1200px){
+    .col-xl-3{
+        max-width: calc(3*100%/12);
+        flex: 0 0 calc(3*100%/12);
+    }
 }
 
 .col-1{
@@ -251,25 +315,12 @@ img{
     flex: 0 0 calc(2*100%/12);
 }
 
-.col-3{
-    max-width: calc(3*100%/12);
-    flex: 0 0 calc(3*100%/12);
-}
-
-.col-4{
-    width: calc(4*100%/12);
-    flex: 0 0 calc(4*100%/12);
-}
-
 .col-5{
     max-width: calc(5*100%/12);
     flex: 0 0 calc(5*100%/12);
 }
 
-.col-6{
-    max-width: calc(50%);
-    flex: 0 0 50%;
-}
+
 
 .col-7{
     max-width: calc(7*100%/12);
@@ -281,10 +332,6 @@ img{
     flex: 0 0 calc(8*100%/12);
 }
 
-.col-9{
-    max-width: calc(9*100%/12);
-    flex: 0 0 calc(9*100%/12);
-}
 
 .col-10{
     max-width: calc(10*100%/12);
@@ -343,7 +390,8 @@ nav{
     background-color: white;
     padding: 1.5rem 2rem;
     line-height: 1.5;
-    display: flex;
+    position: relative;
+    /*display: flex;*/
 }
 
 .navbar{
@@ -352,28 +400,8 @@ nav{
     line-height: inherit;
     align-items: center;
     font-size: 1.1rem;
-}
-
-.navbar-nav{
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navbar-nav a{
-    color: gray;
-    text-transform: capitalize;
-    letter-spacing: 0.1rem;
-    font-weight: bold;
-    display: inline-block;
-    width: 100%;
-    margin-right: 1rem;
-}
-
-.navbar-nav a:hover{
-    color: chocolate;
-    text-decoration: underline;
+    position: relative;
+    margin: 0 auto;
 }
 
 .navbar-brand{
@@ -388,17 +416,96 @@ nav{
     text-decoration: none;
 }
 
+.navbar-nav{
+    display: none;
+}
+
+
 .navbar-tool{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    position: absolute;
-    top: 1.5rem;
-    right: 2rem;
 }
 
-.navbar-tool li{
+.navbar-tool li a{
     margin-left: 1rem;
+    display: inline-flex;
+}
+
+.navbar-tool li a{
+    color: var(--black);
+}
+
+#hamburger{
+    display: none;
+}
+
+#hamburger:checked ~ .navbar-nav{
+    position: absolute;
+    left: 0;
+    top: 70px;
+    background: white;
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+@media (min-width:40em){
+    .navbar{
+        display: flex;
+        justify-content: space-between;
+        line-height: inherit;
+        align-items: center;
+        font-size: 1.1rem;
+        position: relative;
+        margin: 0 auto;
+    }
+
+    .navbar-nav{
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .navbar-nav a{
+        color: gray;
+        text-transform: capitalize;
+        letter-spacing: 0.1rem;
+        font-weight: bold;
+        display: inline-block;
+        width: 100%;
+        margin-right: 1rem;
+    }
+
+    .navbar-nav a:hover{
+        color: chocolate;
+        text-decoration: underline;
+    }
+
+    .navbar-tool{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    .navbar-tool li a{
+        margin-left: 1rem;
+        display: inline-flex;
+    }
+
+    .navbar-tool li a{
+        color: var(--black);
+    }
+
+    .navbar label{
+        display: none;
+    }
+
 }
 
 /*slider*/
